# tree-sitter-orca

./: .gitignore  CMakeLists.txt  Cargo.toml  Claude.md  Makefile  Package.swift  README.md  binding.gyp  expected_output.txt  go.mod  grammar.js  package.json  pyproject.toml  test_output.txt  tree-sitter.json
bindings/c/: tree-sitter-orca.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOrca/: orca.h
bindings/swift/TreeSitterOrcaTests/: TreeSitterOrcaTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: advanced.txt  advanced.txt.bak  basic.txt  compound.txt  edge_cases.txt  geometry.txt  variables.txt
