[package]
name = "tree-sitter-orca"
description = "Parser for input file for the Orca quantum chemistry package"
version = "0.1.0"
authors = ["Kalman Szenes <szenes.kalman@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "orca"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/kszenes/tree-sitter-orca"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
